assets/css/styles.css
html {
    scroll-behavior: smooth;
    overflow-x: hidden;
    
  }
.subTitle {
    margin-top: 4em;
}
.name {
    margin-top: 4em;
}
#topDiv {
    height: 40em;
}
.row .mainContent {
    padding: 0;

}
.projectDiv {
    padding-top: 40px;
}
.projectLink {
    margin-right: 30px;
    margin-left: 30px;
}
.projectTitle {
    padding-bottom: 3em;
}
.profilePic {
    height: 20em;
    width: 20em;
    margin: 5em 0;
    border: solid 5px white;
}
.projectInfo {
    margin: 0 5rem;
    padding-top: 20px;
}
.projectLinks {
    padding-top: 20px;
    padding-bottom: 80px;
}
.col .row {
    margin-right: 0;
}
.profileTitle {
    font-weight: bold;
    border-right: solid 2px lightgray;
    color: rgb(158, 157, 157);
    margin-left: auto;
    font-size: 17px;
    padding-right: 1em;
}
.profileInfo {
    margin-right: auto;
    padding-left: 1em;
    font-size: 20px;
}
.profileContent {
    height: 8em;
}
.carousel.carousel-slider {
    margin-left: 10%;
}
.fixed-action-btn {
    left: 10px;
    top: 10px;
    padding-top: 0;
    right: auto;
    bottom: auto;
    }
h1 {
    margin: 0;
}
.headerText {
    margin: auto;
}
.sectionHeader {
    height: 20em;
}
.row {
    margin-bottom: 0;
}
.linkContent {
    margin:0;
    padding: 1em;

}
.linkContent a {
    color: white;

}
.linkContent a i{
    color: rgb(130, 171, 248);
}
.contactInfo {
    margin:0;
    padding: 0.75em;
}
@media screen and (min-width: 768px) {
    .projectInfo {
        margin: 0 10rem;
        padding-top: 20px;;
    }
    .profilePic {
        height: 30em;
        width: 30em;
        margin: 5em 0;
    }
    .projectInfo {
        margin: 0 10rem;
        padding-top: 20px;
    }
    .profileTitle {
        font-size: 25px;
    }
    .profileInfo {
        font-size: 35px;
    }
    
}
@media screen and (min-width: 992px) {
    .projectInfo {
        margin: 0 25rem;
        padding-top: 20px;;
    }

}

